--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "task-time-tracker",
+	"name": "Task Time Tracker",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "Track Time of each task in one or various projects, with weekly time spent for each project.",
+	"author": "Valeria Guidotti",
+	"authorUrl": "https://github.com/valegui",
+	"fundingUrl": "https://github.com/valegui",
+	"isDesktopOnly": true
 }
