--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
     "target": "ES6",
@@ -10,6 +9,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
+    "types": ["svelte", "node"],
 	"strictNullChecks": true,
     "lib": [
       "DOM",
@@ -20,5 +20,6 @@
   },
   "include": [
     "**/*.ts"
-  ]
+  ],
+  "extends": "@tsconfig/svelte/tsconfig.json",
 }
