--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
-    "allowJs": true,
     "baseUrl": ".",
+    "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
     "target": "ES6",
+    "allowJs": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
-    "types": ["svelte", "node"],
-	  "strictNullChecks": true,
+	"strictNullChecks": true,
     "lib": [
       "DOM",
       "ES5",
@@ -19,8 +19,6 @@
     ]
   },
   "include": [
-    "**/*.ts",
-    "**/*.svelte"
-  ],
-  "extends": "@tsconfig/svelte/tsconfig.json",
+    "**/*.ts"
+  ]
 }
