--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
 	"author": "Valeria Guidotti",
 	"license": "MIT",
 	"devDependencies": {
+		"@tsconfig/svelte": "^5.0.4",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"esbuild-svelte": "^0.8.2",
 		"obsidian": "latest",
+		"svelte": "^4.2.19",
+		"svelte-preprocess": "^6.0.3",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "^5.6.2"
 	}
 }
